examples/c/error-codes/undefined/UB-CDI3-bad-static.output
UB-CDI3-bad-static.c:4:6: error: array initializer must be an initializer list or wide string literal
 int a[] = 1;
     ^
1 error generated.
